fix sub-project icon overlaps project-ID

--- a/templates/pixelegg/app.css
+++ b/templates/pixelegg/app.css
@@ -68,6 +68,7 @@ button#projectmanager-elements-list_link_add_add:hover {
 #projectmanager-list .et2_nextmatch .egwGridView_outer tr > td:first-child > div.innerContainer {
   padding-left: 14px;
   margin-right: -13px;
+  margin-left: 0px;
 }
 #projectmanager-list .et2_nextmatch .egwGridView_outer tr.subentry > td:first-child > div.innerContainer.level_1 {
   margin-right: -24px;
